# AetherBus

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  PythonAPI.md  README.md  Usage.md  portability_plan.md  vcpkg.json
.github/workflows/: ci.yml  release.yml  wheels.yml
assets/: theme-dark.qss  theme-light.qss  theme.qss
cmake/: DevTools.cmake  Version.cmake  toolchain-mingw.cmake
docker/: Dockerfile.mingw
docs/: python_api.md.in
plugins/drivers/mock_driver/: mock_driver.h
python/: README.md  hatch_build.py  pyproject.toml
python/src/aetherbus/: __init__.py  __main__.py  _launcher.py  client.py
scratch/: can-session-plan.md
scripts/: build-windows.sh  gen_python_api.py
scripts/wheel/: check_glibc.py  smoke_run.py  stage.py
snap/: snapcraft.yaml
snap/gui/: aetherbus.desktop
src/: main.cpp
src/core/: IBusDriver.h  bus_protocol.cpp  bus_protocol.h  can_backend.cpp  can_backend.h  can_types.h  capture_replay.cpp  capture_replay.h  format_codec.cpp  format_codec.h  i_bus_backend.h  linux_baud.cpp  linux_baud.h  pty_proxy.cpp  pty_proxy.h  pty_proxy_impl.h  serial_types.h  signal_cleanup.cpp  stats_calculator.cpp  stats_calculator.h
src/core/can/: can_backend.cpp  can_backend.hpp  can_types.hpp  dbc_parser.cpp  dbc_parser.hpp
src/core/common/: capture_replay.cpp  capture_replay.hpp  format_codec.cpp  format_codec.hpp  i_bus_backend.hpp  pcap_writer.cpp  pcap_writer.hpp  signal_cleanup.cpp  signal_cleanup.hpp  stats_calculator.cpp  stats_calculator.hpp
src/core/ethernet/: ethernet_backend.cpp  ethernet_backend.hpp  ethernet_pcap.cpp  ethernet_pcap.hpp  ethernet_types.hpp
src/core/linux/: linux_pty_proxy.cpp  linux_pty_proxy.h
src/core/mac/: mac_pty_proxy.cpp  mac_pty_proxy.h
src/core/serial/: linux_baud.cpp  linux_baud.hpp  pty_proxy.cpp  pty_proxy.hpp  pty_proxy_impl.hpp  serial_types.hpp
src/core/serial/linux/: linux_pty_proxy.cpp  linux_pty_proxy.hpp
src/core/serial/mac/: mac_baud.cpp  mac_baud.hpp  mac_pty_proxy.cpp  mac_pty_proxy.hpp
src/core/serial/posix/: posix_pty_proxy.cpp  posix_pty_proxy.hpp
src/core/serial/win/: win_pty_proxy.cpp  win_pty_proxy.hpp
src/core/usb/: usb_backend.cpp  usb_backend.hpp  usb_parser.cpp  usb_parser.hpp  usb_pcap.cpp  usb_pcap.hpp  usb_types.hpp
src/core/win/: win_pty_proxy.cpp  win_pty_proxy.h
src/gui/: can_config_panel.cpp  can_config_panel.h  can_config_panel.hpp  can_decoder_panel.cpp  can_decoder_panel.hpp  can_session_widget.cpp  can_session_widget.h  can_session_widget.hpp  config_panel.cpp  config_panel.h  config_panel.hpp  configdialog.cpp  configdialog.h  console_panel.cpp  console_panel.h  console_panel.hpp  consoleview.cpp  consoleview.h  consoleview.hpp  consoleview_paint.cpp  consoleview_search.cpp  frametablemodel.cpp  frametablemodel.h  injection_panel.cpp  injection_panel.h  interfacewindow.cpp  interfacewindow.h  macrobar.cpp  macrobar.h  macrobar.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  resources.qrc  session_view.h  session_view.hpp  session_widget.cpp  session_widget.h  session_widget.hpp  signal_panel.cpp  (+8 more)
src/gui/common/: theme_controller.cpp  theme_controller.hpp
src/gui/control/: control_bridge.cpp  control_bridge.hpp  control_server.cpp  control_server.hpp
src/gui/dialogs/: welcome_tutorial_dialog.cpp  welcome_tutorial_dialog.hpp
src/gui/panels/: can_config_panel.cpp  can_config_panel.hpp  can_decoder_panel.cpp  can_decoder_panel.hpp  config_panel.cpp  config_panel.hpp  injection_panel.cpp  packet_constructor_panel.cpp  packet_constructor_panel.hpp  signal_panel.cpp  signal_panel.hpp  usb_config_panel.cpp  usb_config_panel.hpp  usb_injection_panel.cpp  usb_injection_panel.hpp
src/gui/sessions/: can_session_widget.cpp  can_session_widget.hpp  ethernet_packet_model.cpp  ethernet_packet_model.hpp  ethernet_session_widget.cpp  ethernet_session_widget.hpp  session_view.hpp  session_widget.cpp  session_widget.hpp  usb_session_widget.cpp  usb_session_widget.hpp
src/gui/widgets/: byte_inspector_panel.cpp  byte_inspector_panel.hpp  can_sniffer_widget.cpp  can_sniffer_widget.hpp  collapsible_splitter.cpp  collapsible_splitter.hpp  console_panel.cpp  console_panel.hpp  consoleview.cpp  consoleview.hpp  consoleview_paint.cpp  consoleview_search.cpp  macro_button_bar.cpp  macro_button_bar.hpp  macrobar.cpp  macrobar.hpp  statspanel.cpp  statspanel.hpp  throughput_chart.cpp  throughput_chart.hpp
tests/: bus_test.cpp  bus_test.h  bus_test.hpp  bus_test_can.cpp  bus_test_ethernet.cpp  bus_test_gui.cpp  bus_test_pty.cpp  simulate_bus.sh
