[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "aetherbus"
dynamic = ["version"]
description = "Modern lightweight serial-port interceptor and protocol sniffer GUI"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
authors = [{ name = "Berat Atmaca" }]
keywords = ["serial", "uart", "sniffer", "can", "socketcan", "ethernet", "pty", "qt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals :: Serial",
    "Topic :: System :: Networking :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/beratatmaca/AetherBus"
Issues = "https://github.com/beratatmaca/AetherBus/issues"
Changelog = "https://github.com/beratatmaca/AetherBus/blob/main/CHANGELOG.md"

[project.scripts]
aetherbus = "aetherbus._launcher:main"

[tool.hatch.version]
source = "code"
path = "hatch_build.py"
expression = "resolve_version()"

[tool.hatch.build.targets.wheel]
packages = ["src/aetherbus"]
# _bundle/ is populated by scripts/wheel/stage.py and gitignored; "artifacts"
# forces its contents (binaries, *.so/*.dll/*.dylib) past the VCS-based excludes.
artifacts = ["src/aetherbus/_bundle/**"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
